# memfilecli

./: .gitignore  Cargo.toml  LICENSE  PROJECT_SPEC_v2_AgentWiki.md  README.md  skill
src/: get_chromadb.py  main.rs  neighbors_chromadb.py  query_chromadb.py  recent_chromadb.py  write_chromadb.py
