[package]
name = "memfilecli"
version = "0.1.0"
edition = "2021"
description = "MemFileCLI — 结构化记忆检索引擎 (Rust Rewrite)"
authors = ["Chikusa <chikusa@opencode.local>"]

[dependencies]
clap = { version = "=4.4.18", features = ["derive"] }
serde = { version = "=1.0.210", features = ["derive"] }
serde_json = "=1.0.132"
indicatif = "=0.17.9"
regex = "=1.10.5"
walkdir = "=2.5.0"
chrono = { version = "=0.4.38", features = ["serde"] }
colored = "=2.1.0"
anyhow = "=1.0.86"
dirs = "=5.0.1"
